Modify account page

--- a/flask_app/templates/account.html
+++ b/flask_app/templates/account.html
@@ -78,87 +78,103 @@
       {% if documents|length > 0 %}
       <div>
         {% for document in documents %}
-                    <li>
-                        <a href="{{ url_for('document', document_id=document.id) }}">{{ document.title }}</a>
-                        (Created on {{ document.date_created.strftime('%Y-%m-%d') }})
-                    </li>
-                {% endfor %}
+        <li>
+          <a href="{{ url_for('document', document_id=document.id) }}"
+            >{{ document.title }}</a
+          >
+          (Created on {{ document.date_created.strftime('%Y-%m-%d') }})
+        </li>
+        {% endfor %}
       </div>
       {% else %}
       <div>
         <p>You have not created any document.</p>
-      </div>            
+      </div>
       {% endif %}
-      <form action="{{ url_for('new_document', user_id=current_user.id) }}" method="post">
-        <button type="submit" class="btn btn-primary">Create New Document</button>
-    </form>
-<div class="profileForm">    
-<form id="profileForm" action="#" autocomplete="on" method="post" enctype="multipart/form-data">
-      {{ form.hidden_tag() }}
-            <fieldset>
-              <legend>
-                Update Account Information
-              </legend>
-              <div class="form-group">
-                {{ form.first_name.label(class="form-control-label") }} {% if
-                form.first_name.errors %} {{ form.first_name(class="form-control
-                form-control-lg is-invalid") }}
-                <div class="invalid-feedback">
-                  {% for error in form.first_name.errors %}
-                  <span>{{ error }}</span>
-                  {% endfor %}
-                </div>
-                {% else %} {{ form.first_name(class="form-control
-                form-control-lg") }} {% endif %}
-              </div>
-              <div class="form-group">
-                {{ form.last_name.label(class="form-control-label") }} {% if
-                form.last_name.errors %} {{ form.last_name(class="form-control
-                form-control-lg is-invalid") }}
-                <div class="invalid-feedback">
-                  {% for error in form.last_name.errors %}
-                  <span>{{ error }}</span>
-                  {% endfor %}
-                </div>
-                {% else %} {{ form.last_name(class="form-control form-control-lg")
-                }} {% endif %}
-              </div>
-              <div class="form-group">
-                {{ form.email.label(class="form-control-label") }} {% if
-                form.email.errors %} {{ form.email(class="form-control
-                form-control-lg is-invalid") }}
-                <div class="invalid-feedback">
-                  {% for error in form.email.errors %}
-                  <span>{{ error }}</span>
-                  {% endfor %}
-                </div>
-                {% else %} {{ form.email(class="form-control form-control-lg") }}
-                {% endif %}
-              </div>
-              <div class="form-group">
-                {{ form.picture.label() }}
-                {{ form.picture(class="form-control-file") }}
-                {% if form.picture.errors %}
-                  {% for error in form.picture.errors %}
-                    <span class="text-danger">{{ error }}</span></br>
-                    {% endfor %}
-                {% endif %}
-            </div>
-              <div class="form-group">
-                {{ form.submit_to_update(class="btn btn-outline-info
-                submitForm") }}
-              </div>
-            </fieldset>
-          </form>
-          </div>
+      <form
+        action="{{ url_for('new_document', user_id=current_user.id) }}"
+        method="post"
+      >
+        <div class="createDoc">
+          <button type="submit" class="btn btn-primary">
+            Create New Document
+          </button>
         </div>
-        <input type="submit" value="Update" />
       </form>
+      <div class="profileForm">
+        <form
+          id="profileForm"
+          action="#"
+          autocomplete="on"
+          method="post"
+          enctype="multipart/form-data"
+        >
+          <div class="closeFormContainer">
+            <i class="closeForm">Close</i>
+          </div>
+          {{ form.hidden_tag() }}
+          <fieldset>
+            <legend>Update Account Information</legend>
+            <div class="form-group">
+              {{ form.first_name.label(class="form-control-label") }} {% if
+              form.first_name.errors %} {{ form.first_name(class="form-control
+              form-control-lg is-invalid") }}
+              <div class="invalid-feedback">
+                {% for error in form.first_name.errors %}
+                <span>{{ error }}</span>
+                {% endfor %}
+              </div>
+              {% else %} {{ form.first_name(class="form-control
+              form-control-lg") }} {% endif %}
+            </div>
+            <div class="form-group">
+              {{ form.last_name.label(class="form-control-label") }} {% if
+              form.last_name.errors %} {{ form.last_name(class="form-control
+              form-control-lg is-invalid") }}
+              <div class="invalid-feedback">
+                {% for error in form.last_name.errors %}
+                <span>{{ error }}</span>
+                {% endfor %}
+              </div>
+              {% else %} {{ form.last_name(class="form-control form-control-lg")
+              }} {% endif %}
+            </div>
+            <div class="form-group">
+              {{ form.email.label(class="form-control-label") }} {% if
+              form.email.errors %} {{ form.email(class="form-control
+              form-control-lg is-invalid") }}
+              <div class="invalid-feedback">
+                {% for error in form.email.errors %}
+                <span>{{ error }}</span>
+                {% endfor %}
+              </div>
+              {% else %} {{ form.email(class="form-control form-control-lg") }}
+              {% endif %}
+            </div>
+            <div class="form-group">
+              {{ form.picture.label() }} {{
+              form.picture(class="form-control-file") }} {% if
+              form.picture.errors %} {% for error in form.picture.errors %}
+              <span class="text-danger">{{ error }}</span>
+              {% endfor %} {% endif %}
+            </div>
+            <div class="form-group">
+              {{ form.submit_to_update(class="btn btn-outline-info submitForm")
+              }}
+            </div>
+          </fieldset>
+        </form>
+      </div>
+    </div>
+    <!-- <input type="submit" value="Update" /> -->
+  </section>
+  <section>
+    <div class="logout">
+      <button type="submit">
+        <a href="{{ url_for('signout') }}">Log Out</a>
+      </button>
     </div>
   </section>
-  <button type="submit">
-    <a href="{{ url_for('signout') }}">Log Out</a>
-  </button>
 </div>
 <script src="../static/scripts/account.js"></script>
 {% endblock body %}
