Modify home page

--- a/flask_app/templates/index.html
+++ b/flask_app/templates/index.html
@@ -18,9 +18,11 @@
         Built to take the work out of writing<br />
         Perfect for copywriters, with built-in resources to boost productivity
       </p>
-      <button id="signUp">
-        <a href="/signup">Get Started </a>
-      </button>
+      <div>
+        <button id="signUp">
+          <a href="/signup">Get Started </a>
+        </button>
+      </div>
     </div>
   </div>
 </section>
