--- a/flask_app/static/style/signup.css
+++ b/flask_app/static/style/signup.css
@@ -5,26 +5,6 @@
     text-decoration: none;
 }
 
-:root 
-{
-    --font-size-sm: 16px;
-    --font-size-m: 20px;
-    --font-size-l: 24px;
-    --font-size-xl: 26px;
-    --font-size-xxl: 30px;
-    --font-title: 40px;
-    --inter-font: inter;
-    --white-color: #F3F6FC;
-    --lilac-color: #8A9AC5;
-    --black-color: #000;
-    --dull-black: #252222;
-    --roboto-font: Roboto Slab;
-    --Inria-font: Inria Serif;
-    --button-background-color: #6a7db1;
-    --grey-color: #8b8585;
-    --link-hover-color: #FFD700;
-}
-
 body {
     width: 100%;
     height: auto;
@@ -41,21 +21,21 @@ body {
     justify-content: center;
     align-items: center;
     padding-inline: calc(15px + 1vmax);
-    padding-top: calc(250px + 1vmax);
-    padding-bottom: 20px;
+    padding-bottom: 4rem;
     /* margin-bottom: 20px; */
     /* background: #F3F6FC; */
     overflow: auto;
 }
 
-.main-container .signUpForm {
-    width: auto;
+.signUpForm {
+    width: 100%;
     height: auto;
-    background-color: var(--white-color);
+    background-color: var(--off-white-color);
     margin-top: calc(50px + 1vmax);
-    border-radius: 25px;
-    padding-inline: calc(5% + 1vmin);
-    padding-block: calc(20px + 1vmin);
+    border-radius: 10px;
+    /* padding-inline: calc(5% + 1vmin);
+    padding-block: calc(20px + 1vmin); */
+    padding: 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -78,31 +58,31 @@ body {
 .main-container label {
     display: block;
     margin-left: 28px;
-    margin-bottom: 10px;
+    margin-bottom: .5rem;
     color: var(--dull-black);
     /* text-align: center; */
     font-family: Roboto Slab;
-    font-size: var(--font-size-l);
+    font-size: var(--font-size-m);
     font-style: normal;
     font-weight: 400;
     line-height: 110%; /* 26.4px */
 }
 .main-container input {
+    width: 100%;
     display: block;
-    margin-bottom: 30px;
-    padding-inline: 16px;
-    border-radius: 20px;
-    border: 3px solid var(--dull-black);
+    margin-bottom: 1rem;
+    padding: 15px;
+    border-radius: 10px;
+    border: 1px solid var(--dull-black);
     background: var(--white-color);
-    font-size: var(--font-size-m);
-    width: 80%;
-    height: 60px;
+    font-size: var(--font-size-l);
     flex-shrink: 0;
-    transition: width 2s ease-in-out;
+    transition: all 2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
 .main-container input:focus {
     width: 100%;
     outline: none;
+    border: 2px solid var(--secondary-color);
 }
 
 .form-check {
@@ -113,14 +93,14 @@ body {
     color: var(--dull-black);
     margin: 0 !important;
     padding: 0 !important;
-    gap: 20px;
+    gap: 10px;
 }
 
 .form-check > input[type="checkbox"]{
     display: inline;
     transition: none;
-    width: 30px;
-    height: 30px;
+    width: 20px;
+    height: 20px;
     background: #FFF;
     margin: 0;
 }
@@ -158,7 +138,7 @@ span {
 
 span > a{
     display: inline;
-    color: var(--lilac-color);
+    color: var(--secondary-color);
     font-family: Inter;
     font-style: normal;
     font-weight: 500;
@@ -172,9 +152,9 @@ span > a{
     padding: 15px 10px !important;
     justify-content: center !important;
     align-items: center !important;
-    border-radius: 20px !important;
-    background: #8A9AC5 !important;
-    color: var(--white-color) !important;
+    border-radius: 10px !important;
+    background: var(--btn-primary) !important;
+    color: var(--off-white-color) !important;
     font-family: Inter !important;
     font-size: 20px !important;
     font-style: normal !important;
@@ -186,7 +166,7 @@ span > a{
 
 .submitForm:hover {
     opacity: 0.8 !important;
-    background-color: rebeccapurple !important;
+    background-color: var(--secondary-color) !important;
 }
 
 .main-container .signin {
@@ -196,59 +176,19 @@ span > a{
     float: right;
     color: #000;
     font-family: Inter;
-    font-size: 20px;
+    font-size: var(--font-size-sm);
     font-style: normal;
     font-weight: 500;
     line-height: normal;
 }
 .main-container a:hover {
-    color: var(--lilac-color);
+    color: var(--secondary-color);
 }
 
 
-/* Tablet Screen */
+/* Larger Screen */
 @media screen and (min-width: 768px) {
-    .main-container label {
-        font-size: var(--font-size-l);
-    }
-    .main-container input {
-        font-size: var(--font-size-l);
-    }
-    span {
-        font-size: var(--font-size-l);
-    }
-    .submitForm {
-        font-size: var(--font-size-l) !important;
-    }
-}
-
-/* Laptop Screen */
-@media screen and (min-width: 1024px) {
-    .main-container .signUpForm {
-        width: 550px;
-        padding-inline: calc(2% + 1vmin);
-    }
-
-    .main-container label {
-        font-size: var(--font-size-xl);
-    }
-    .main-container input {
-        font-size: var(--font-size-xl);
-    }
-    span {
-        font-size: var(--font-size-xl);
-    }
-}
-
-/* Large screen */
-@media screen and (min-width: 1444px) {
-    .main-container label {
-        font-size: var(--font-size-xxl);
-    }
-    .main-container input {
-        font-size: var(--font-size-xxl);
-    }
-    span {
-        font-size: var(--font-size-xxl);
+    .signUpForm {
+        width: 450px;
     }
 }
